added template source files

--- a/css/main.css
+++ b/css/main.css
@@ -3,16 +3,16 @@
     --spacing: 15px;
     --font-size: 1.15rem;
     /* Normal Colors */
-    --background-color: white;
-    --alt-background-color: gainsboro;
-    --font-color: black;
-    --alt-font-color: darkslategray;
+    --background-color: #ECE4B7;
+    --alt-background-color: #E5D4ED;
+    --font-color: #023C40;
+    --alt-font-color: #7E78D2;
     --border-color: black;
     /* Dark Mode Colors */
-    --dark-background-color: black;
-    --dark-alt-background-color: darkslategray;
-    --dark-font-color: white;
-    --dark-alt-font-color: gainsboro;
+    --dark-background-color: #212227;
+    --dark-alt-background-color: #A24936;
+    --dark-font-color: #EFFFC8;
+    --dark-alt-font-color: #adbfc5;
     --dark-border-color: white;
 }
 
