--- a/css/main.css
+++ b/css/main.css
@@ -71,6 +71,32 @@ main {
     color: var(--font-color);
     background-color: var(--background-color);
 }
+#contact-form{
+    display: inline-block;
+    
+    border: 1px solid white;
+}
+textarea {
+    resize: none;
+
+  }
+section.tables {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto;
+    
+}
+table {
+    align-content: center;
+    text-align: left;
+}
+table, th, td {
+    border: 2.5px solid white;
+  }
+  td {
+  height: 50px;
+  vertical-align: bottom;
+}
 #banner-wrapper img {
     width: 100%;
     height: auto;
