--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,7 @@ body {
     display: flex;
     flex-direction: column;
     font-size: 62.5%;
+    
 }
 
 header {
@@ -74,7 +75,7 @@ main {
 #contact-form{
     margin-left: 25%;
     margin-right: 25%;
-    margin-bottom: 25%;
+
     padding: 1%;
     
     border: 1px solid white;
@@ -89,29 +90,47 @@ table {
     text-align: left;
     margin-left: 25%;
     margin-right: 25%;
-    margin-bottom: 25%;
+    margin-top: 10%;
     padding: 1%;
     
 }
-table, th, td {
-    border: 2.5px solid white;
+table th {
+    border-bottom: 2.5px solid var(--border-color);
+}
+table, td {
+    border: 2.5px solid var(--border-color);
   }
   td {
   height: 50px;
   vertical-align: bottom;
 }
+li {
+    border: 1px solid black;
+}
+li:hover{
+    background-color: var(--background-color) ;
+}
+#logo-wrapper img{
+    width: 100%;
+    height:auto;
+}
+#logo-wrapper img:hover{
+    transform: scale(1.5);
+}
 #banner-wrapper img {
     width: 100%;
     height: auto;
   }
-  
+  section.three-cols #left-img img{
+      width: 100%;
+      height: auto;
+  }
   section.three-cols {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr ;
     text-align: center;
-   
-  
+    margin-top: 1.5%;
   }
   section.three-cols .tables{
     grid-column: 2/3;
@@ -123,10 +142,75 @@ table, th, td {
     grid-row: 1/2;
     
   }
+  section.three-cols .card-left{
+    grid-column: 1/2;
+    grid-row: 1/2;
+    
+  }
+  section.three-cols .card-mid{
+    grid-column: 2/3;
+    grid-row: 1/2;
+    
+  }
+  section.three-cols .card-right{
+    grid-column: 3/4;
+    grid-row: 1/2;
+    
+  }
+  section.three-cols .card-left {
+    /* Add shadows to create the "card" effect */
+    
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    margin-left: 18%;
+    margin-right: 18%;
+    margin-top: 5%;
+    margin-bottom: 5%;
+  }
+  /* On mouse-over, add a deeper shadow */
+  section.three-cols .card-left:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
+  section.three-cols .card-left img {
+    width: 100%;
+    height: auto;
+    display: block;
+  }
+  section.three-cols .card-mid {
+    /* Add shadows to create the "card" effect */
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    margin-left: 18%;
+    margin-right: 18%;
+    margin-top: 5%;
+    margin-bottom: 5%;
+  }
+  /* On mouse-over, add a deeper shadow */
+  section.three-cols .card-mid:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
+  section.three-cols .card-right {
+    /* Add shadows to create the "card" effect */
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    margin-left: 18%;
+    margin-right: 18%;
+    margin-top: 5%;
+    margin-bottom: 5%;
+  }
+  /* On mouse-over, add a deeper shadow */
+  section.three-cols .card-right:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
+  /* Add some padding inside the card container */
+  .container {
+    padding: 2px 16px;
+  }
 
   section.three-cols .mid-column-text{
     grid-column: 2/3;
     grid-row: 1/2;
+    
     
   }
   section.three-cols .right-column-img{
@@ -137,16 +221,28 @@ table, th, td {
     grid-column: 2/3;
     grid-row: 2/3;
   }
+  section.three-cols .left-column-img:hover{
+    transform: scale(1.25);  
+    
+  }
+  section.three-cols .right-column-img:hover{
+    transform: scale(1.25);  
+    
+  }
   section.full-cols{
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr ;
     text-align: center;
+    margin-top: 5%;
   }
 
   section.full-cols .full-image{
     width: 100%;
     height: auto;
+  }
+  section.full-cols .full-image:hover{
+    transform: scale(1.25);
   }
   
 footer {
@@ -325,3 +421,12 @@ body.dark-mode footer #dark-mode #tgl-wrapper .tgl + .tgl-btn {
 body.dark-mode footer #dark-mode #tgl-wrapper .tgl + .tgl-btn:after {
     background-color: var(--dark-border-color);
 }
+li:hover.dark-mode{
+    background-color: var(--dark-alt-background-color) ;
+}
+body.dark-mode table,body.dark-mode th {
+    border-bottom: 2.5px solid var(--dark-border-color);
+}
+body.dark-mode table,body.dark-mode td  {
+    border: 2.5px solid var(--dark-border-color);
+  }
