--- a/css/main.css
+++ b/css/main.css
@@ -64,7 +64,9 @@ header nav ul li {
     padding: 7.5px;
     margin-right: 7.5px;
 }
-
+.title{
+  font-size: 50px;
+}
 main {
     flex: 1;
     font-size: var(--font-size);
@@ -73,6 +75,7 @@ main {
     background-color: var(--background-color);
 }
 #contact-form{
+    margin-top: 5%;
     margin-left: 25%;
     margin-right: 25%;
 
@@ -121,10 +124,7 @@ li:hover{
     width: 100%;
     height: auto;
   }
-  section.three-cols #left-img img{
-      width: 100%;
-      height: auto;
-  }
+
   section.three-cols {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -171,11 +171,11 @@ li:hover{
   section.three-cols .card-left:hover {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
   }
-  section.three-cols .card-left img {
+  .card-left img{
     width: 100%;
     height: auto;
-    display: block;
   }
+  
   section.three-cols .card-mid {
     /* Add shadows to create the "card" effect */
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
@@ -203,10 +203,13 @@ li:hover{
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
   }
   /* Add some padding inside the card container */
-  .container {
+  section.three-cols .container {
     padding: 2px 16px;
   }
-
+  .card-img img{
+    width: 100%;
+    height: auto;
+  }
   section.three-cols .mid-column-text{
     grid-column: 2/3;
     grid-row: 1/2;
